Varinace Data Added

--- a/Gene_Data_PCA.ipynb
+++ b/Gene_Data_PCA.ipynb
@@ -89,6 +89,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Total Varinace](Variance.PNG)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
